--- a/1.html
+++ b/1.html
@@ -11,7 +11,7 @@ a{color: #FFFF00; text-decoration: none;}
 </style>
 
 <body>
-<div style="text-align:center;width:350px">
+<div style="width:350px">
 	<div style="width: 310px;height: 240px;background: #F5F5F5;border: 1px solid #A9A9A9;margin: 25px;">
 		<div style="font-size: 14px;text-indent: 2em;text-align: left;margin-top: 14px;margin-left: 6px;margin-right: 6px;">抱歉，为了安全使用软件平台，您需要重新登录</div>
 		<div style="font-size: 14px;width: 60px;height: 25px;margin-top: 150px;margin-left: 122px;background: #CE0000;line-height: 24px;">
@@ -22,7 +22,7 @@ a{color: #FFFF00; text-decoration: none;}
 
 
 	</div>
-	<div style="font-size:12px;margin-left:12px;color: 	#808080;">郑大疫情防控领导小组、信息化办公室自主研制，版权所有</div>
+	<div style="font-size:12px;margin-left:8px;color: #808080;">郑大疫情防控领导小组、信息化办公室自主研制，版权所有</div>
 </div>
 
 
