--- a/1.html
+++ b/1.html
@@ -11,8 +11,8 @@ a{color: #FFFF00; text-decoration: none;}
 </style>
 
 <body>
-<div style="margin-left: 35px;width:350px;">
-	<div style="width: 310px;height: 240px;background: #F5F5F5;border: 1px solid #A9A9A9;margin: 25px;">
+<div style="width:350px;">
+	<div style="width: 310px;height: 240px;background: #F5F5F5;border: 1px solid #A9A9A9;margin-left: 10px;">
 		<div style="font-size: 14px;text-indent: 2em;text-align: left;margin-top: 14px;margin-left: 6px;margin-right: 6px;">抱歉，为了安全使用软件平台，您需要重新登录</div>
 		<div style="font-size: 14px;width: 60px;height: 25px;margin-top: 150px;margin-left: 122px;background: #CE0000;line-height: 24px;">
 			
