--- a/2.html
+++ b/2.html
@@ -15,23 +15,23 @@ a{ text-decoration: none; color: #0000EE;}
   <div style="width:350px">
 	<img src="https://jksb.v.zzu.edu.cn/imagesss/bar_jksb.png" />
     <div style="text-indent: 8px;color: #AE0000;font-size: 14px;line-height: 30px;">选择填报人和填报类型</div>
-    <div style="font-size: 13px;border-bottom:1px solid #DCDCDC; border-top:1px solid #DCDCDC;line-height: 30px;">填报类型:&nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp<img border="0" src="anniu1.svg"  width="12" height="12"> &nbsp每日填报</div>
-    <div style="font-size: 13px;margin-top: 8px;margin-bottom: 5px;line-height: 10px;border-bottom:1px solid #DCDCDC;">填报日：<span id="ymd"></span><span style="color:	#008000">&nbsp&nbsp 今日您已经填报过了</span><p>填报时间：<span id="ymd-"></span> 00:16 &nbsp&nbsp&nbsp <a href="1.html"><span
+    <div style="font-size: 13px;border-bottom:1px solid #F5F5F5; border-top:1px solid #F5F5F5;line-height: 30px;">填报类型:&nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp<img border="0" src="anniu1.svg"  width="12" height="12"> &nbsp每日填报</div>
+    <div style="font-size: 13px;margin-top: 8px;margin-bottom: 5px;line-height: 10px;border-bottom:1px solid #F5F5F5;">填报日：<span id="ymd"></span><span style="color:	#008000">&nbsp&nbsp 今日您已经填报过了</span><p>填报时间：<span id="ymd-"></span> 00:16 &nbsp&nbsp&nbsp <a href="1.html"><span
               style="color:#00c;">〖查看上报历史〗</span></a></p></div>
-    <div style="border-bottom:1px solid #DCDCDC;line-height: 20px;">
+    <div style="border-bottom:1px solid #F5F5F5;line-height: 20px;">
     	<span style="color:#FF00FF;font-size: 14px;"id="md1"></span><img border="0" src="ok2020.png"  width="14" height="14"> &nbsp
     	<span style="color:#FF00FF;font-size: 14px;"id="md2"></span><img border="0" src="ok2020.png"  width="14" height="14"> &nbsp
       <span style="color:#FF00FF;font-size: 14px;"id="md3"></span><img border="0" src="ok2020.png"  width="14" height="14"> &nbsp
       <span style="color:#FF00FF;font-size: 14px;"id="md4"></span><img border="0" src="ok2020.png"  width="14" height="14"> 
     </div>
-      <div style="border-bottom:1px solid #DCDCDC;line-height: 25px;">
+      <div style="border-bottom:1px solid #F5F5F5;line-height: 25px;">
       <span style="color:#FF00FF;font-size: 14px;"id="md5"></span><img border="0" src="ok2020.png"  width="14" height="14"> &nbsp
       <span style="color:#FF00FF;font-size: 14px;"id="md6"></span><img border="0" src="ok2020.png"  width="14" height="14"> &nbsp
       <span style="color:#FF00FF;font-size: 14px;"id="md7"></span><img border="0" src="ok2020.png"  width="14" height="14"> &nbsp
       <span style="color:#FF00FF;font-size: 14px;"id="md8"></span><img border="0" src="ok2020.png"  width="14" height="14">
     </div>         
   </div> 
-  <div style="font-size:14px;border-bottom:1px solid #DCDCDC;"><span style="line-height:10px;"><span style="color:#8B008B">个人基本信息： &nbsp &nbsp&nbsp</span><a href="https://jksb.v.zzu.edu.cn/vls6sss/zzujksb.dll/logout?ptopid=sF0F72AFC1A10405AAD66E3C32C8A1EE1"><span
+  <div style="font-size:14px;border-bottom:1px solid #F5F5F5;"><span style="line-height:10px;"><span style="color:#8B008B">个人基本信息： &nbsp &nbsp&nbsp</span><a href="https://jksb.v.zzu.edu.cn/vls6sss/zzujksb.dll/logout?ptopid=sF0F72AFC1A10405AAD66E3C32C8A1EE1"><span
               style="color:#00c;">〖切换账号〗</span></a><a href="1.html">&nbsp&nbsp&nbsp&nbsp<span
               style="color:#00c;">〖上载照片〗</span></a>
               <p>所属院系：<span style="color:#0000EE">管理工程学院 &nbsp&nbsp〖查看照片〗</span></p>
@@ -42,11 +42,11 @@ a{ text-decoration: none; color: #0000EE;}
               <p>&nbsp&nbsp&nbsp&nbsp&nbsp<a href="3.html"><span
               style="color:#0000EE;">〖学生请假系统〗</span></a></p>
             </div>
-            <div style="text-align: right;">
+            <div style="text-align: right;margin-top:3px;">
               
-              <div style="display: inline-block; color: #AE0000;width: 90px;text-align: center;height: 30px;line-height: 27px; background:#FFC0CB; border-radius:5px;">取消</div>
-              <div style="display: inline-block; color:   #005757;width: 90px;text-align: center;height: 30px;line-height: 27px; background:      #98FB98; border-radius:5px;">本人填报</div>
-            <div style="font-size:12px;line-height:22px;color: #272727;">
+              <div style="font-size:14px;display: inline-block; color: #AE0000;width: 90px;text-align: center;height: 30px;line-height: 30px; background:#FFC0CB; border-radius:5px;">取消</div>
+              <div style="font-size:14px;display: inline-block; color: #005757;width: 90px;text-align: center;height: 30px;line-height: 30px; background:#98FB98; border-radius:5px;">本人填报</div>
+            <div style="font-size:12px;line-height:22px;color: #808080;">
               郑州大学疫情防控领导小组、信息化办公室自主研制，版权所有
             </div>  
               
