--- a/2.html
+++ b/2.html
@@ -45,7 +45,7 @@ a{ text-decoration: none; color: #0000EE;}
             <div style="text-align: right;margin-top:3px;">
               
               <div style="font-size:14px;display: inline-block; color: #AE0000;width: 90px;text-align: center;height: 30px;line-height: 30px; background:#FFC0CB; border-radius:5px;">取消</div>
-              <div style="font-size:14px;display: inline-block; color: #005757;width: 90px;text-align: center;height: 30px;line-height: 30px; background:#98FB98; border-radius:5px;">本人填报</div>
+              <div style="font-size:14px;display: inline-block; color: #005757;width: 90px;text-align: center;height: 30px;line-height: 30px; background:#CEFFCE; border-radius:5px;">本人填报</div>
             <div style="font-size:12px;line-height:22px;color: #808080;">
               郑州大学疫情防控领导小组、信息化办公室自主研制，版权所有
             </div>  
