--- a/1.html
+++ b/1.html
@@ -22,7 +22,7 @@ a{color: #FFFF00; text-decoration: none;}
 
 
 	</div>
-	<div style="font-size:12px;color: #808080;margin-left:10px;margin-top:10px;">郑大疫情防控领导小组、信息化办公室自主研制，版权所有</div>
+	<div style="font-size:12px;color: #808080;margin-left:10px;line-height:22px;">郑大疫情防控领导小组、信息化办公室自主研制，版权所有</div>
 </div>
 
 
