--- a/zycin.html
+++ b/zycin.html
@@ -110,7 +110,7 @@
   let   timer = setInterval(() => {
     border.style.borderColor =colors[time];
     time++
-    if (time>colors.length){time=0}
+    if (time>colors.length-1){time=0}
 
         
     },1000)
