--- a/zycin.html
+++ b/zycin.html
@@ -46,8 +46,8 @@
    <div style="width: 307px;height: 307px;">
    <div class="border"s
           style="width:100%;min-height:25px;line-height:25px;font-size:14px;color:#333;border: 23px solid #469142 !important;text-align:center;">
-          <img src="https://z3.ax1x.com/2021/10/29/5jpgyt.png"
-            style="width:300px;border:0px;margin-bottom: -30px;">
+          <img src="photozyc.jpg"
+            style="height:300px;border:0px;margin-top:-1px;margin-bottom: -8px;">
           <div style="position:relative;margin-top:-2px"><span style="color: #000099;font-size: 13px">管理工程学院 张亦驰&nbsp&nbsp&nbsp</span></div>
     </div>
 
