--- a/zycin.html
+++ b/zycin.html
@@ -47,7 +47,7 @@
    <div class="border"s
           style="width:100%;min-height:25px;line-height:25px;font-size:14px;color:#333;border: 23px solid #469142 !important;text-align:center;">
           <img src="photozyc.jpg"
-            style="height:300px;border:0px;margin-top:-1px;margin-bottom: -8px;">
+            style="height:300px;border:0px;margin-bottom: -8px;">
     </div>
 
 
