--- a/zycin.html
+++ b/zycin.html
@@ -26,7 +26,7 @@
    <div style="width: 350px;height: 103px;background:url(https://jksb.v.zzu.edu.cn/imagesss/title316_36478.png);">
      <div style="width:100%;height:32px;text-align:right;;font-size:12px">
       <a href="1.html"><span
-              style="color:#00c;">〖切换账号〗</span></a>
+              style="color:#00c;">〖切换账号〗&nbsp&nbsp</span></a>
      </div>
    </div>
    <div class="a1">
@@ -38,7 +38,7 @@
             style="font-size:22px;color:#c00;font-weight:500;font-family:黑体;">9分45秒</span>
       </div>  
    </div> 
-   <div style="font-family:黑体;color:#000099;font-weight: 500;margin-left:1em;line-height:20px">
+   <div style="font-family:黑体;color:#000099;font-weight: 600;margin-left:1em;line-height:20px">
    管理工程学院&nbsp&nbsp张亦驰<br>
    通行信息：主校区大门东门.<span style="background-color:  #469142; color: #FFFFFF;">入口</span><br>
    出入身份：批准出入校园学生
