--- a/zycin.html
+++ b/zycin.html
@@ -8,7 +8,7 @@
 <title>郑州大学数据中台2021</title>
 <style type="text/css">
 	a{ text-decoration: none }
-	.a1{ width:100%;height:32%;line-height:28px;text-align:left; border-bottom:1px solid #DCDCDC; border-top:1px solid #DCDCDC;}
+	.a1{ width:100%;height:32%;line-height:30px;text-align:left; border-bottom:1px solid #DCDCDC; border-top:1px solid #DCDCDC;}
 
   @media screen and (height: 50px) {
     body {}
@@ -30,7 +30,7 @@
      </div>
    </div>
    <div class="a1">
-  	  <div style="margin-top: 4px;">
+  	  <div style="margin-bottom: 4px;">
   	   <span
             style="font-size:12px;color:#333;margin-top: 80px;">获取时间：</span><span
             style="font-size:16px;color:#a0a;font-weight:500;font-family:黑体;" id="header-data"></span><span
