--- a/1.html
+++ b/1.html
@@ -7,14 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 <title>郑州大学数据中台2021</title>
 <style type="text/css">
-a{color: #FFFF00; text-decoration: none;}	
+a{color: #fbff81; text-decoration: none;}	
 </style>
 
 <body>
 <div style="width:350px;">
-	<div style="margin-top:20px;width: 310px;height: 240px;background: #F5F5F5;border: 1px solid #A9A9A9;text-align:center;margin-left:10px">
-		<div style="font-size: 14px;text-indent: 2em;text-align: left;margin-top: 14px;margin-left: 6px;margin-right: 6px;">抱歉，为了安全使用软件平台，您需要重新登录</div>
-		<div style="font-size: 14px;width: 60px;height: 25px;margin-left: 122px;margin-top: 150px;background: #CE0000;line-height: 24px">
+	<div style="margin-top:20px;width: 310px;height: 240px;background: #F2F2F2;border: 1px solid #A9A9A9;text-align:center;margin-left:10px">
+		<div style="font-size: 14px;text-indent: 2em;text-align: left;margin-top: 14px;margin-left: 6px;margin-right: 6px;color:#333">抱歉，为了安全使用软件平台，您需要重新登录</div>
+		<div style="font-size: 14px;width: 80px;height: 30px;margin-left: 122px;margin-top: 145px;background: #b50000;line-height: 30px">
 			
 		<a href="2.html">确认</a>
 	
