--- a/3.html
+++ b/3.html
@@ -7,24 +7,25 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 <title>健康平台学生请假系统</title>
 <style type="text/css">
+body{margin:0px;}
 a{color: #696969; text-decoration: none;}	
 </style>
 
 <body>
-<div style="background:	#191970;"><img src="logo.png" /></div>
+	<div style="background:	#233c73;"><div style="margin-left: 12px;"><img src="logo.png" /></div></div>
 
 
-<div style="font-style: 21px;line-height: 40px;border-bottom:2px solid #DCDCDC;"><a href="2.html"><span style="font-size:40px" 
+<div style="font-style: 21px;line-height: 40px;border-bottom:2px solid #ddd;"><a href="2.html"><span style="font-size:40px" 
               >&laquo</span></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp请假列表</div>
 <div>
-	 <div style="font-size: 12px;display: inline-block; color: #FFFFFF;width: 65px;text-align: left;height: 27px;line-height: 28px;margin-top: 10px; background:	#008080; border-radius:3px;">&nbsp&nbsp新增请假</div>&nbsp&nbsp
-	  <div style="font-size: 12px;display: inline-block; color: #FFFFFF;width: 77px;text-align: left;height: 27px;line-height: 28px;margin-top: 10px; background:	#008080; border-radius:3px;">&nbsp&nbsp已销假列表</div>&nbsp&nbsp
-	   <div style="font-size: 12px;display: inline-block; color: #FFFFFF;width: 77px;text-align: left;height: 27px;line-height: 28px;margin-top: 10px; background:	#008080; border-radius:3px;">&nbsp&nbsp被驳回列表</div>
+	 <div style="font-size: 12px;display: inline-block; color: #FFFFFF;width: 65px;text-align: left;height: 27px;line-height: 28px;margin-top: 10px; background:	#0a8; border-radius:3px;">&nbsp&nbsp新增请假</div>&nbsp&nbsp
+	  <div style="font-size: 12px;display: inline-block; color: #FFFFFF;width: 77px;text-align: left;height: 27px;line-height: 28px;margin-top: 10px; background:	#0a8; border-radius:3px;">&nbsp&nbsp已销假列表</div>&nbsp&nbsp
+	   <div style="font-size: 12px;display: inline-block; color: #FFFFFF;width: 77px;text-align: left;height: 27px;line-height: 28px;margin-top: 10px; background:	#0a8; border-radius:3px;">&nbsp&nbsp被驳回列表</div>
 </div>
-<div style="font-style: 21px;line-height: 40px;margin-top: 10px;border-bottom:1px solid #DCDCDC;border-top:1px solid #DCDCDC;">
+<div style="font-style: 21px;line-height: 40px;margin-top: 10px;border-bottom:1px solid #ddd;border-top:1px solid #ddd;">
 	&nbsp&nbsp&nbsp开始日期&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 类型&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 状态
 </div>
-<div style="font-style: 21px;line-height: 40px;margin-top: 10px;border-bottom:1px solid #DCDCDC;">
+<div style="font-style: 21px;line-height: 40px;margin-top: 10px;border-bottom:1px solid #ddd;">
 &nbsp&nbsp&nbsp<span style=";"id="md"></span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp事假&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp已批准&nbsp<span style="color: #1E90FF;">详情</span>&nbsp&nbsp<span style="color: #D3D3D3;">&gt</span>
 </div>
 </body >
