--- a/1.html
+++ b/1.html
@@ -13,7 +13,7 @@ a{color: #fbff81; text-decoration: none;}
 <body>
 <div style="width:350px;">
 	<div style="margin-top:20px;width: 310px;height: 240px;background: #F2F2F2;border: 1px solid #A9A9A9;text-align:center;margin-left:10px">
-		<div style="font-size: 14px;text-indent: 2em;text-align: left;margin-top: 14px;margin-left: 6px;margin-right: 6px;color:#333">抱歉，为了安全使用软件平台，您需要重新登录</div>
+		<div style="font-size: 14px;text-indent: 2em;text-align: left;margin-top: 14px;margin-left: 6px;margin-right: 6px;color: #333;">抱歉，为了安全使用软件平台，您需要重新登录</div>
 		<div style="font-size: 14px;width: 80px;height: 30px;margin-left: 122px;margin-top: 145px;background: #b50000;line-height: 30px">
 			
 		<a href="2.html">确认</a>
@@ -28,7 +28,3 @@ a{color: #fbff81; text-decoration: none;}
 
 </body >
 
- 
-
-
-</html>
