--- a/zycin.html
+++ b/zycin.html
@@ -38,14 +38,14 @@
             style="font-size:22px;color:#c00;font-weight:500;font-family:黑体;">9分45秒</span>
       </div>  
    </div> 
-   <div style="font-family:黑体;color:#000099;font-size:18px;font-weight: 600;margin-left:1em;line-height:24px">
+   <div style="font-family:黑体;color:#00a;font-size:18px;font-weight: 500;margin-left:1em;line-height:24px">
    管理工程学院&nbsp&nbsp张亦驰<br>
-   通行信息：主校区大门东门.<span style="background-color:  #469142; color: #FFFFFF;">入口</span><br>
+   通行信息：主校区大门东门.<span style="background-color:  #070; color: #ff0;">入口</span><br>
    出入身份：批准出入校园学生
    </div>
    <div style="width: 307px;height: 307px;">
    <div class="border"s
-          style="width:100%;min-height:25px;line-height:25px;font-size:14px;color:#333;border: 23px solid #469142 !important;text-align:center;">
+          style="width:100%;min-height:25px;line-height:25px;font-size:14px;color:#333;border: 23px solid #090 !important;text-align:center;">
           <img src="photozyc.jpg"
             style="height:300px;border:0px;margin-bottom: -8px;">
     </div>
@@ -105,7 +105,7 @@
     
  var border = document.querySelector(".border");
  var time = 0;
- var colors= ["#cef5d0","#469142"];
+ var colors= ["#bfffc8","#090"];
   let   timer = setInterval(() => {
     border.style.borderColor =colors[time];
     time++
