--- a/5.html
+++ b/5.html
@@ -43,7 +43,7 @@ input:focus{border:1px solid #1E90FF; color:#1E90FF;}
   <div style="margin-bottom: 10px;">审核状态&nbsp&nbsp<input type="text" value="销假已批准"></div>
   <div style="margin-bottom: 10px;">审核时间&nbsp&nbsp<span style="border: 1px solid #ddd;border-radius: 5px;padding: 3px;"><span style="font-size: 12px;"id="ymd2"></span><span style="font-size: 12px;">12:47:36</span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span></div>
   <div>
-  <span style="font-size: 12px;display: inline-block; color: #FFFFFF;width: 77px;text-align: left;height: 27px;line-height: 28px;margin-top: 10px; background: #00ccff; border-radius:3px;">&nbsp&nbsp已销假列表</span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+  <span style="font-size: 12px;display: inline-block; color: #FFFFFF;width:110px;text-align: left;height: 27px;line-height: 28px;margin-top: 10px; background: #00ccff; border-radius:3px;">&nbsp&nbsp&nbsp查看销假详情</span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 
 </div>
 </body >
