--- a/1.html
+++ b/1.html
@@ -7,6 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 <title>郑州大学数据中台2021</title>
 <style type="text/css">
+*{margin:0 auto}	
 a{color: #fbff81; text-decoration: none;}	
 </style>
 
