--- a/zycin.html
+++ b/zycin.html
@@ -7,6 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 <title>郑州大学数据中台2021</title>
 <style type="text/css">
+*{margin:0 auto}	
 	a{ text-decoration: none }
 	.a1{ width:100%;height:32%;line-height:30px;text-align:left; border-bottom:1px solid #DCDCDC; border-top:1px solid #DCDCDC;}
 
