--- a/3.html
+++ b/3.html
@@ -7,6 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 <title>健康平台学生请假系统</title>
 <style type="text/css">
+*{margin:0 auto}
 body{margin: 0px;}
 a{color: #FFFFFF; text-decoration: none;}	
 </style>
