--- a/zycout.html
+++ b/zycout.html
@@ -39,7 +39,7 @@
       </div>  
    </div> 
    <div style="font-family:黑体;color:#00a;font-size:18px;font-weight: 500;margin-left:1em;line-height:24px">
-   管理工程学院&nbsp&nbsp张亦驰<br>
+   管理工程学院&nbsp&nbsp&nbsp张亦驰<br>
    通行信息：主校区大门东门.<span style="background-color:  #c0c; color: #ff0;">出口</span><br>
    出入身份：批准出入校园学生[离校]
    </div>
@@ -53,7 +53,7 @@
 
    
    </div>
-   <div style="position:relative;margin-top:45px;border-top:1px solid #DCDCDC;font-size:12px;color:#696969;text-align:center;line-height: 18px;">郑州大学疫情防控领导小组、保卫处、信息化办公室</div>
+   <div style="position:relative;margin-top:44px;border-top:1px solid #DCDCDC;font-size:12px;color:#696969;text-align:center;line-height: 18px;">郑州大学疫情防控领导小组、保卫处、信息化办公室</div>
    </div>
 
 
