--- a/lwin.html
+++ b/lwin.html
@@ -40,7 +40,7 @@
    </div> 
    <div style="font-family:黑体;color:#00a;font-size:18px;font-weight: 500;margin-left:1em;line-height:24px">
    化学学院&nbsp&nbsp&nbsp李雯<br>
-   通行信息：主校区大门东门.<span style="background-color:  #070; color: #ff0;">入口</span><br>
+   通行信息：主校区大门南门.<span style="background-color:  #070; color: #ff0;">入口</span><br>
    出入身份：请假被批准的学生[返校]  
    </div>
    <div style="width: 307px;height: 307px;">
