--- a/lwin.html
+++ b/lwin.html
@@ -17,7 +17,7 @@
    <div style="width: 100%;height: 102px;background:url(https://jksb.v.zzu.edu.cn/imagesss/title316_19119.png);">
      <div style="width:100%;line-height:32px;text-align:right">
       <a href="1lw.html"><span
-              style="color:#00c;">〖切换账号〗</span></a>
+              style="color:#00c;font-size:12px">〖切换账号〗</span></a>
      </div>
    </div>
 
@@ -31,7 +31,7 @@
           </div>
       
     
-    <div style="width:100%;min-height:25px;line-height:25px;font-size:18px;color:#00a;font-weight:500;font-family:黑体;">　<span style="color:#00a">化学学院　张亦驰</span><br />　通行信息：主校区大门东门.<span style="background-color:#070;color:#ff0">入口</span><br />　出入身份：请假被批准的学生[返校]<br /></div>
+    <div style="width:100%;min-height:25px;line-height:25px;font-size:18px;color:#00a;font-weight:500;font-family:黑体;">　<span style="color:#00a">化学学院　李雯</span><br />　通行信息：主校区大门东门.<span style="background-color:#070;color:#ff0">入口</span><br />　出入身份：请假被批准的学生[返校]<br /></div>
    
    <div style="width: 100%;height: 350px;">
    <div class="border"s
