--- a/zycout.html
+++ b/zycout.html
@@ -17,7 +17,7 @@
    <div style="width: 100%;height: 102px;background:url(https://jksb.v.zzu.edu.cn/imagesss/title316_19119.png);">
      <div style="width:100%;line-height:32px;text-align:right">
       <a href="1.html"><span
-              style="color:#00c;">〖切换账号〗</span></a>
+              style="color:#00c;font-size:12px;text-decoration:none">〖切换账号〗</span></a>
      </div>
    </div>
 
