--- a/lwout.html
+++ b/lwout.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" type="text/css" href="_xwss_2017.css" />
 <style>
 #bak_0 {MARGIN:0 auto; left: 0;WIDTH: 350px; min-HEIGHT:540px;}	
+a{text-decoration:none}
 </style>
 
 <body >
@@ -17,7 +18,7 @@
    <div style="width: 100%;height: 102px;background:url(https://jksb.v.zzu.edu.cn/imagesss/title316_19119.png);">
      <div style="width:100%;line-height:32px;text-align:right">
       <a href="1lw.html"><span
-              style="color:#00c;font-size:12px;text-decoration:none">〖切换账号〗</span></a>
+              style="color:#00c;font-size:12px;">〖切换账号〗</span></a>
      </div>
    </div>
 
