--- a/zycin.html
+++ b/zycin.html
@@ -8,7 +8,7 @@
 <title>郑州大学数据中台2021</title>
 <link rel="stylesheet" type="text/css" href="_xwss_2017.css" />
 <style>
-#bak_0 {margin: 0 auto; left: 0; WIDTH: 350px; min-HEIGHT:540px;}	
+#bak_0 {margin: 0 auto;  WIDTH: 350px; min-HEIGHT:540px;}	
    a{text-decoration:none}
 </style>
 
