--- a/zycin.html
+++ b/zycin.html
@@ -8,14 +8,14 @@
 <title>郑州大学数据中台2021</title>
 <link rel="stylesheet" type="text/css" href="_xwss_2017.css" />
 <style>
-#bak_0 {margin: 0 auto; left:0; WIDTH: 350px; min-HEIGHT:540px;}	
+
    a{text-decoration:none}
 </style>
 
 <body >
 <form method="POST" name="myform52" action="">
-<center>
-   <div id="bak_0">  
+
+   <div style="margin: 0 auto; left:0; WIDTH: 350px; min-HEIGHT:540px;">  
    <div style="width: 100%;height: 102px;background:url(https://jksb.v.zzu.edu.cn/imagesss/title316_19119.png);">
      <div style="width:100%;line-height:32px;text-align:right">
       <a href="1.html"><span
@@ -45,7 +45,7 @@
   <div style="width:100%;min-height:18px;line-height:18px;font-size:12px;color:#666;text-align:center;border-top:1px solid #DCDCDC;">郑州大学疫情防控领导小组、保卫处、信息化办公室</div>
   <div style="width:100%;min-height:18px;line-height:18px;font-size:12px;color:#666;text-align:center;">定位：河南省郑州市中原区长椿路辅路</div>
    </div>
-   </center>
+
 </body >
 
 <script language="javascript">
