--- a/zycin.html
+++ b/zycin.html
@@ -15,7 +15,7 @@
 <body >
 <form method="POST" name="myform52" action="">
 
-   <div style="margin: 0 auto; left:0; WIDTH: 350px; min-HEIGHT:540px;">  
+   <div style="margin-left:2px left:0; WIDTH: 350px; min-HEIGHT:540px;">  
    <div style="width: 100%;height: 102px;background:url(https://jksb.v.zzu.edu.cn/imagesss/title316_19119.png);">
      <div style="width:100%;line-height:32px;text-align:right">
       <a href="1.html"><span
