--- a/2.html
+++ b/2.html
@@ -41,6 +41,8 @@ a{ text-decoration: none; color: #0000EE;}
               <p>宿舍：<span style="color: #005757">主校区-松园4号楼.127房</span></p>
               <p>&nbsp&nbsp&nbsp&nbsp&nbsp<a href="3.html"><span
               style="color:#0000EE;">〖学生请假系统〗</span></a></p>
+	  <p>&nbsp&nbsp&nbsp&nbsp&nbsp<a href="3.html"><span
+              style="color:#0000EE;">〖周日外出报备〗</span></a></p>
             </div>
             <div style="text-align: right;margin-top:3px;">
               
