--- a/zycout.html
+++ b/zycout.html
@@ -41,7 +41,7 @@
    <div style="font-family:黑体;color:#00a;font-size:18px;font-weight: 500;margin-left:1em;line-height:24px">
    管理工程学院&nbsp&nbsp&nbsp张亦驰<br>
    通行信息：主校区大门东门.<span style="background-color:  #c0c; color: #ff0;">出口</span><br>
-   出入身份：批准出入校园学生[离校]
+   出入身份：批准出入校园学生
    </div>
    <div style="width: 307px;height: 307px;">
    <div class="border"s
