--- a/lww_ct.html
+++ b/lww_ct.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>jQuery+CSS3星云密布旋转背景动画特效</title>
+<title>李雯雯专属圣诞树</title>
 
 <script src="https://www.jq22.com/jquery/jquery-1.10.2.js"></script>
 
 <style>
 body {
+	width:450px;
   background: radial-gradient(200% 100% at bottom center, #f7f7b6, #e96f92, #75517d, #1b2947);
   background: radial-gradient(220% 105% at top center, #1b2947 10%, #75517d 40%, #e96f92 65%, #f7f7b6);
   background-attachment: fixed;
