--- a/lww_ct.html
+++ b/lww_ct.html
@@ -1,15 +1,16 @@
-﻿<!doctype html>
+<!doctype html>
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 <title>李雯雯专属圣诞树</title>
 
 <script src="https://www.jq22.com/jquery/jquery-1.10.2.js"></script>
 
 <style>
 body {
-	width:450px;
-  background: radial-gradient(200% 100% at bottom center, #f7f7b6, #e96f92, #75517d, #1b2947);
+  width: 450px;
+ background: radial-gradient(200% 100% at bottom center, #f7f7b6, #e96f92, #75517d, #1b2947);
   background: radial-gradient(220% 105% at top center, #1b2947 10%, #75517d 40%, #e96f92 65%, #f7f7b6);
   background-attachment: fixed;
   overflow: hidden;
@@ -73,23 +74,25 @@ body {
 	display: block;
 }
 .demo {
-      
+      text-align:center
       width: 440px;
       padding: 30px;
-      font: bold 55px/100% "微软雅黑", "Lucida Grande", "Lucida Sans", Helvetica, Arial, Sans;;
+      font: bold 45px/100% "微软雅黑", "Lucida Grande", "Lucida Sans", Helvetica, Arial, Sans;;
       color: #fff;
       text-transform: uppercase;
 }
 .demo1 {
+  text-align:center
   color: #fff;
   text-shadow: 1px 1px rgba(197, 223, 248,0.8),2px 2px rgba(197, 223, 248,0.8),3px 3px rgba(197, 223, 248,0.8),4px 4px rgba(197, 223, 248,0.8),5px 5px rgba(197, 223, 248,0.8),6px 6px rgba(197, 223, 248,0.8);text-align: center;
 }
 </style>
 <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style="width: 450px;">
 
 <div class="stars"></div>  <!--背景层，不要删除，不然没有作用-->
+
 
 <div class="demo demo1">李雯雯专属圣诞树</div>
 <div class="container1">
