--- a/zycout.html
+++ b/zycout.html
@@ -4,7 +4,7 @@
 
 </head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=0.96maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 <title>郑州大学数据中台2021</title>
 <style type="text/css">
 	a{ text-decoration: none }
@@ -23,7 +23,7 @@
 
 
 <div id="container" style="width:350px">  
-   <div style="width: 350px;height: 103px;background:url(https://jksb.v.zzu.edu.cn/imagesss/title316_81249.png);">
+   <div style="width: 350px;height: 103px;background:url(https://jksb.v.zzu.edu.cn/imagesss/title316_35835.png);">
      <div style="width:100%;height:32px;text-align:right;;font-size:12px">
       <a href="1.html"><span
               style="color:#00c;">〖切换账号〗&nbsp&nbsp</span></a>
@@ -40,7 +40,7 @@
    </div> 
    <div style="font-family:黑体;color:#00a;font-size:18px;font-weight: 500;margin-left:1em;line-height:24px">
    管理工程学院&nbsp&nbsp&nbsp张亦驰<br>
-   通行信息：主校区大门南门.<span style="background-color:  #c0c; color: #ff0;">出口</span><br>
+   通行信息：主校区大门东门.<span style="background-color:  #c0c; color: #ff0;">出口</span><br>
    出入身份：请假被批准的学生[离校]
    </div>
    <div style="width: 307px;height: 307px;">
