--- a/zycin.html
+++ b/zycin.html
@@ -4,7 +4,7 @@
 
 </head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=1.1 maximum-scale=1.1, minimum-scale=1.0, user-scalable=yes">
 <title>郑州大学数据中台2021</title>
 <style type="text/css">
 	
