--- a/zycin.html
+++ b/zycin.html
@@ -4,7 +4,7 @@
 
 </head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.1 maximum-scale=1.1, minimum-scale=1.0, user-scalable=yes">
+<meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 <title>郑州大学数据中台2021</title>
 <style type="text/css">
 	
@@ -20,7 +20,7 @@
 	
 </style>
 
-<body style="margin-left: 3px;width:100%">
+<body style="margin-left: 3px;width:100%;text-align:center ">
 
 
 <div id="container" style="width:350px">  
