--- a/zycout.html
+++ b/zycout.html
@@ -20,7 +20,7 @@
 </style>
 
 <body style="margin-left: 3px;width:100%">
-
+<div style="text-align:center ">
 
 <div id="container" style="width:350px">  
    <div style="width: 350px;height: 103px;background:url(https://jksb.v.zzu.edu.cn/imagesss/title316_35835.png);">
@@ -58,7 +58,7 @@
 
 
 </div>
-
+	</div>
 
 </body >
 
