--- a/lwin.html
+++ b/lwin.html
@@ -4,7 +4,7 @@
 
 </head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.00 maximum-scale=1.2, minimum-scale=1.0, user-scalable=yes">
+<meta name="viewport" content="width=device-width, initial-scale=1.00 maximum-scale=1.2, minimum-scale=1.0, user-scalable=no">
 <title>郑州大学数据中台2021</title>
 <style type="text/css">
 	a{ text-decoration: none }
@@ -19,7 +19,7 @@
 	
 </style>
 
-<body style="margin-left: 4px;width:100%">
+<body style="text-align:center;width:100%">
 
 
 <div id="container" style="width:350px">  
