--- a/lwin.html
+++ b/lwin.html
@@ -19,8 +19,8 @@
 	
 </style>
 
-<body style="text-align:center;width:100%">
-
+<body style="width:100%">
+<div style="width:350px;margin:auto">
 
 <div id="container" style="width:350px">  
    <div style="width: 350px;height: 103px;background:url(https://jksb.v.zzu.edu.cn/imagesss/title316_35835.png);">
@@ -59,7 +59,7 @@
 
 </div>
 
-
+</div>
 </body >
 
 <script language="javascript">
