--- a/lwin.html
+++ b/lwin.html
@@ -19,7 +19,7 @@
 	
 </style>
 
-<body style="width:100%">
+<body style="width:350px">
 <div style="width:350px;margin:auto">
 
 <div id="container" style="width:350px">  
