--- a/zycin070401.html
+++ b/zycin070401.html
@@ -5,7 +5,7 @@
 </head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-<title>郑州大学数据中台2020</title>
+<title>郑州大学数据中台2021</title>
 <style type="text/css">
 	a{ text-decoration: none }
 	.a1{ width:100%;height:32%;line-height:30px;text-align:left; border-bottom:1px solid #DCDCDC; border-top:1px solid #DCDCDC;}
@@ -21,7 +21,7 @@
 
 <body style="margin-left: 3px;width:100%">
 
-<div style="width:95%;height:95%">
+<div style="margin-left:10px; width:95%;height:95%">
 <div id="container" style="width:350px">  
    <div style="width: 360px;height: 80px;background:url(title.jpg);background-size: 104% 108%;border-bottom:1px solid #DCDCDC;">
      
