--- a/zycin070401.html
+++ b/zycin070401.html
@@ -30,7 +30,7 @@
    <div style="font-family:黑体;font-size: 16px;color:#000099;font-weight: 600;line-height:24px;background:url(student.jpg);background-size: 100%;margin-bottom: 8px;margin-top: 8px;">
    管理学院.张亦驰
       <a href="1.html"><span
-              style="color:#00c;font-size: 12px;">〖切换账号〗&nbsp&nbsp</span></a>
+              style="color:#000099;font-size: 12px;">〖切换账号〗&nbsp&nbsp</span></a>
      <br>
    主校区大门东门.<span style="background-color:  #469142; color: #FFFFFF;">入口</span><br>
    身份：批准出入校园学生<span
