--- a/zycin070401.html
+++ b/zycin070401.html
@@ -51,6 +51,11 @@
     </div>
 
    </div> 
+	<div style="margin-top: 30px;">
+	<video width="350" height="200" controls autoplay>
+  <source src="time.mp4" type="time/mp4">
+  <source src="time.ogg" type="time/ogg">
+		</video> </div>
 <div style="width:350px;margin-top:30px;margin-left: 5px;border-top:1px solid #DCDCDC;font-size:12px;color:#808080;text-align:center;line-height: 18px;">郑州大学疫情防控领导小组、保卫处、信息化办公室</div>
 <div style="width: 350px;margin-left: 5px;font-size:12px;text-align:center;line-height: 18px;"><span style="color:#696969;">定位：河南郑州附近&nbsp&nbsp&nbsp（</span><span style="color:#009900">扫码在期望区域内</span><span style="color:#696969;">）</span></div>
 
