--- a/zycin070401.html
+++ b/zycin070401.html
@@ -6,6 +6,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 <title>郑州大学数据中台2021</title>
+	<link rel="stylesheet" href="./style.css">
 <style type="text/css">
 	a{ text-decoration: none }
 	.a1{ width:100%;height:32%;line-height:30px;text-align:left; border-bottom:1px solid #DCDCDC; border-top:1px solid #DCDCDC;}
@@ -51,11 +52,37 @@
     </div>
 
    </div> 
-	<div style="margin-top: 30px;">
-	<video width="350" height="200" controls autoplay>
-  <source src="time.mp4" type="time/mp4">
-  <source src="time.ogg" type="time/ogg">
-		</video> </div>
+	
+	
+ <div style="width: 350px;height: 70px;margin-top: 36px;margin-left: 4px;background-color: #028528;"></div>
+    <div style="width: 350px;background-color: #028528;margin-top: 16px;margin-left: 4px;">
+        
+        <div style="text-align: center;font-family: 黑体;margin-top: -16px;font-size: 16px;font-size: 600;color: #ffff;">郑州大学主校区</div>
+
+    <svg class="editorial"
+         xmlns="http://www.w3.org/2000/svg"
+         xmlns:xlink="http://www.w3.org/1999/xlink"
+         viewBox="0 20 150 50"
+         preserveAspectRatio="none" >
+        <defs>
+            <path id="gentle-wave"
+                  d="M-160 44c30 0
+    58-18 88-18s
+    58 18 88 18
+    58-18 88-18
+    58 18 88 18
+    v44h-352z" fill-opacity="0.3"/>
+        </defs>
+        <g class="parallax" >
+            <use xlink:href="#gentle-wave" x="80" y="0" fill="#55af6f" />
+            <use xlink:href="#gentle-wave" x="80" y="3" fill="#55af6f" />
+           
+        </g>
+    </svg>
+     <img style="width:350px;height: 250px ;margin-top: -120px;" src="back1.png">
+    <div style="width:350px;height: 20px ;text-align: center;border-radius:4px;margin-top: -90px;;">2022年7月5日</div>	
+	
+	
 <div style="width:350px;margin-top:30px;margin-left: 5px;border-top:1px solid #DCDCDC;font-size:12px;color:#808080;text-align:center;line-height: 18px;">郑州大学疫情防控领导小组、保卫处、信息化办公室</div>
 <div style="width: 350px;margin-left: 5px;font-size:12px;text-align:center;line-height: 18px;"><span style="color:#696969;">定位：河南郑州附近&nbsp&nbsp&nbsp（</span><span style="color:#009900">扫码在期望区域内</span><span style="color:#696969;">）</span></div>
 
