--- a/zycin070408.html
+++ b/zycin070408.html
@@ -4,7 +4,7 @@
 
 </head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=0.95 maximum-scale=0.98, minimum-scale=0.95, user-scalable=no">
 <title>郑州大学数据中台2021</title>
  <link rel="stylesheet" href="./style.css">
 <style type="text/css">
@@ -25,7 +25,7 @@
 <body style="margin-left: 3px;width:100%;border-top:0px">
 
 <div style="width:95%;height:95%">
-<div id="container" style="width:340px">  
+<div id="container" style="width:340px; margin-left:10px">  
    <div style="width: 350px;height: 80px;background:url(title.jpg);background-size: 104% 108%; border-bottom:1px solid #DCDCDC;border-top:0px">
      
    </div>
