--- a/zycin070408.html
+++ b/zycin070408.html
@@ -22,7 +22,7 @@
 	
 </style>
 
-<body style="margin-left: 3px;width:100%;border-top:0px">
+<body style="margin-left: 3px;width:100%;border-top:0px；overflow: hidden;">
 
 <div style="width:95%;height:95%">
 <div id="container" style="width:340px; margin-left:10px">  
