--- a/zycin070408.html
+++ b/zycin070408.html
@@ -4,7 +4,7 @@
 
 </head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=0.95 maximum-scale=0.98, minimum-scale=0.95, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=0.95 maximum-scale=0.98, minimum-scale=0.95, user-scalable=yes">
 <title>郑州大学数据中台2021</title>
  <link rel="stylesheet" href="./style.css">
 <style type="text/css">
