--- a/zycin070408.html
+++ b/zycin070408.html
@@ -22,7 +22,7 @@
 	
 </style>
 
-<body style="width:100%;height: 100%;margin-left:40px;border-top:0px">
+<body style="width:100%;height: 100%;margin-left:38px;border-top:0px">
 
 <div style="width:95%;height:100%;">
 <div id="container" style="width:340px">  
@@ -49,7 +49,7 @@
    <div class="border"s
           style="width:110%;height: 100%;min-height:15px;line-height:25px;font-size:14px;color:#333;border: 15px solid #469142 !important;text-align:center;">
           <img src="photozyc.jpg"
-            style="width: 200px;height:275px;border:0px;margin-bottom: 0px;">
+            style="width: 200px;height:280px;border:0px;margin-bottom: 0px;">
           
     </div>
 
@@ -96,7 +96,8 @@
 </iframe>
 </div>
 
-<div style="width: 330px;margin-left: 20px;margin-top: 20px;font-size:20px;font-family: 黑体;font-weight: 600;text-align:left;line-height: 18px;">张*驰</div>
+<div style="width: 330px;margin-left: 20px;margin-top: 20px;font-size:20px;font-family: 黑体;font-weight: 600;text-align:left;line-height: 18px;">张*驰<br>
+<span style="color:#707070;font-size:16px;font-family: 黑体;font-weight: 500;">1304**********0637 </span><img src="./eye.png" height="12" width="13"></div>
 
 
 </div>
