--- a/zycin070408.html
+++ b/zycin070408.html
@@ -56,7 +56,7 @@
    </div> 
 
 
- <div style="width: 340px;height: 80px;margin-top: 42px;margin-left: 1px;background-color: #009929;text-align: center;font-family: 黑体;font-size: 0px;font-size: 600;color: #ffff;"><br><br><div style="height: 80px;margin-top: 45px;font-size: 20px;">郑州大学主校区</div>
+ <div style="width: 340px;height: 80px;margin-top: 42px;margin-left: 1px;background-color: #009929;text-align: center;font-family: 黑体;font-size: 0px;font-size: 600;color: #ffff;border-bottom:1px solid #009929;"><br><br><div style="height: 80px;margin-top: 45px;font-size: 20px;">郑州大学主校区</div>
  </div> 
     <div style="width: 340px;height: 120px;margin-left: 1px;background-color: #009929;">
       
