--- a/zycin0719.html
+++ b/zycin0719.html
@@ -115,17 +115,17 @@
 </div>
 </div>
 
-<div style="width:317px;height: 78px; margin-left: -8px;margin-top: 17px;background-color: #FFFFFF;border-radius: 5px;font-family: 黑体;font-weight:600"> 
+<div style="width:317px;height: 82px; margin-left: -8px;margin-top: 17px;background-color: #FFFFFF;border-radius: 5px;font-family: 黑体;font-weight:600"> 
 
-<div style="width:181px;height: 58px;font-size: 14px;text-align: left;background-color:#ffff;color: #2b2c2d;display: inline-block;border-radius: 5px; ;"><br> &nbsp&nbsp距到期还剩<br>
-<div style="display: inline-block;width: 505;font-size:50px;font-family:Bahnschrift;transform: scale(1.0,0.9)"></div><div style="display: inline-block;text-align: center;font-size:12px; "><br> &nbsp&nbsp7月19日 12:23 采样时间
+<div style="width:181px;height: 58px;font-size: 14px;text-align: left;background-color:#ffff;color: #2b2c2d;display: inline-block;border-radius: 5px; ;"><br> &nbsp&nbsp&nbsp最近核酸检测<br>
+<div style="display: inline-block;width: 505;font-size:50px;font-family:Bahnschrift;transform: scale(1.0,0.9)"></div><div style="display: inline-block;text-align: center;font-size:12px; "><br> &nbsp&nbsp&nbsp7月19日 12:23 采样时间
 <br>&nbsp
 <br>&nbsp
 
 </div>
 
 </div>
-<div style="width:110px;height: 68px;font-size: 14px;text-align: center;background-color:#f7f8fc;color: #56b7ea;display: inline-block;border-radius: 5px;"><br>距到期还剩
+<div style="width:110px;height: 72px;font-size: 14px;text-align: center;background-color:#f7f8fc;color: #56b7ea;display: inline-block;border-radius: 5px;"><br>距到期还剩
 <div style="display: inline-block;text-align: center;font-size:16px;"><br>38<span style="font-size:12px">小时</span>47<span style="font-size:12px">分</span><br>&nbsp
 </div>
 
