--- a/zycin0720.html
+++ b/zycin0720.html
@@ -58,7 +58,7 @@
 
  <div style="width: 340px;height: 80px;margin-top: 42px;margin-left: 1px;background-color: #009929;text-align: center;vertical-align: top;font-family: 黑体;font-size: 0px;font-size: 600;color: #ffff;"><br><br><div style="height: 80px;margin-top: 45px;font-size: 20px;">郑州大学主校区</div>
  </div> 
-    <div style="width: 340px;height: 120px;margin-left: 1px;background-color: #009929;">
+    <div style="width: 340px;height: 120px;margin-left: 1px;background-color: #009929;margin-top: -1px;">
       
         
 
