--- a/zycin07201.html
+++ b/zycin07201.html
@@ -118,7 +118,7 @@
 <div style="width:317px;height: 80px; margin-left: -8px;margin-top: 17px;background-color: #FFFFFF;border-radius: 5px;font-family: 黑体;font-weight:600"> 
 
 <div style="width:181px;height: 58px;font-size: 14px;text-align: left;background-color:#ffff;color: #2b2c2d;display: inline-block;border-radius: 5px; ;"><br> &nbsp&nbsp&nbsp最近核酸检测<br>
-<div style="display: inline-block;width: 505;font-size:50px;font-family:Bahnschrift;transform: scale(1.0,0.9)"></div><div style="display: inline-block;text-align: center;font-size:12px; "><br> &nbsp&nbsp7月19日 12:23 采样时间
+<div style="display: inline-block;width: 505;font-size:50px;font-family:Bahnschrift;transform: scale(1.0,0.9)"></div><div style="display: inline-block;text-align: center;font-size:12px; "><br> &nbsp&nbsp&nbsp7月19日 12:23 采样时间
 <br>&nbsp
 <br>&nbsp
 
