--- a/zycin07201.html
+++ b/zycin07201.html
@@ -40,7 +40,7 @@
             style="font-size:12px;color:#383838 ">(</span><span
             style="font-size:12px;color:#383838 ;"id="header-data"></span><span
             style="font-size:12px;color:#383838 ;">获取) </span><br>
-            <span style="font-family:黑体;font-size:11px;color:#787878;">关注"郑州大学网络管理中心"微信公众号可提醒健康打卡</span>
+            <span style="font-family:黑体;font-size:11px;color:#F00000;">提醒：未检索到你今日出校记录</span>
 
       </div> 
      
