--- a/zycin0724.html
+++ b/zycin0724.html
@@ -119,7 +119,7 @@
 
 <div style="width:162px;height: 58px;font-size: 14px;text-align: center;background-color:#ffff;color: #2b2c2d;float:left;border-radius: 5px; ;"><br> 最近核酸检测<br>
 
-<div style="border-radius: 15px;width:69px;height: 22px;border:1px solid #56b7ea;color:#56b7ea ;text-align: center;line-height: 22px;margin-left: 36px;margin-top: 8px;margin-bottom: -7px;">采样时间</div><br> 7月19日 12:23
+<div style="border-radius: 15px;line-height: 14px;width:69px;height: 22px;border:1px solid #56b7ea;color:#56b7ea ;text-align: center;line-height: 22px;margin-left: 36px;margin-top: 8px;margin-bottom: -7px;">采样时间</div><br> 7月19日 12:23
 <br>&nbsp
 <br>&nbsp
 </div>
