--- a/zycin84.html
+++ b/zycin84.html
@@ -36,11 +36,11 @@
               style="color:#00c;font-size: 12px;">〖切换账号〗&nbsp&nbsp</span></a>
      <br>
    主校区大门东门.<span style="background-color:  #469142; color: #FFFFFF;">入口</span><br>
-   身份：批准出入校园学生<span
+   身份：请假被批准的学生<span
             style="font-size:12px;color:#383838 ">(</span><span
             style="font-size:12px;color:#383838 ;"id="header-data"></span><span
             style="font-size:12px;color:#383838 ;">获取) </span><br>
-            <span style="font-family:黑体;font-size:12px;color:#F00000">提醒：未检索到你今日出校记录</span>
+            <span style="font-family:黑体;font-size:12px;color:#787878">关注"郑州大学网络管理中心"微信公众号可提醒健康打卡</span>
 
       </div> 
      
