--- a/zycin84.html
+++ b/zycin84.html
@@ -36,7 +36,7 @@
               style="color:#00c;font-size: 12px;">〖切换账号〗&nbsp&nbsp</span></a>
      <br>
    主校区大门东门.<span style="background-color:  #469142; color: #FFFFFF;">入口</span><br>
-   身份：请假被批准的学生(入校)<span
+   身份：请假被批准的学生<span
             style="font-size:12px;color:#383838 ">(</span><span
             style="font-size:12px;color:#383838 ;"id="header-data"></span><span
             style="font-size:12px;color:#383838 ;">获取) </span><br>
